# advent-of-code-2025

./: .gitignore  README.md
day1/: CMakeLists.txt  main.cpp
day2/src/: main.rs
day3/: day3.py
day4/: build.zig  build.zig.zon
day4/src/: main.zig  root.zig
day5/: day5.nim
day6/: day6.go
day7/: day7.ts
